objects/BMCServiceDesk__CMDB_Staging__c.object
<CustomObject>
    <fields>
        <fullName>BMCServiceDesk__CS_FirmwareVersion__c</fullName>
        <label>FirmwareVersion</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__CS_FlashMemory__c</fullName>
        <label>FlashMemory</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__CS_Frequency__c</fullName>
        <label>Frequency</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__CS_HostName__c</fullName>
        <label>HostName</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__CS_InputCurrent__c</fullName>
        <label>InputCurrent</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__CS_InputVoltage__c</fullName>
        <label>InputVoltage</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__CS_MaxConsumption__c</fullName>
        <label>MaxConsumption</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__CS_MediaSupported__c</fullName>
        <label>MediaSupported</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__CS_NumberOfSlots__c</fullName>
        <label>NumberOfSlots</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__CS_OtherCapabilityDescription__c</fullName>
        <label>OtherCapabilityDescription</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__CS_PortsPerSlot__c</fullName>
        <label>PortsPerSlot</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__CS_PrimaryCapability__c</fullName>
        <label>PrimaryCapability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Dedicated</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Storage</fullName>
                </value>
                <value>
                    <fullName>Router</fullName>
                </value>
                <value>
                    <fullName>Switch</fullName>
                </value>
                <value>
                    <fullName>Layer 3 Switch</fullName>
                </value>
                <value>
                    <fullName>Central Office Switch</fullName>
                </value>
                <value>
                    <fullName>Hub</fullName>
                </value>
                <value>
                    <fullName>Access Server</fullName>
                </value>
                <value>
                    <fullName>Firewall</fullName>
                </value>
                <value>
                    <fullName>Print</fullName>
                </value>
                <value>
                    <fullName>I/O</fullName>
                </value>
                <value>
                    <fullName>Web Caching</fullName>
                </value>
                <value>
                    <fullName>Server</fullName>
                </value>
                <value>
                    <fullName>Management</fullName>
                </value>
                <value>
                    <fullName>Block Server</fullName>
                </value>
                <value>
                    <fullName>File Server</fullName>
                </value>
                <value>
                    <fullName>Mobile User Device</fullName>
                </value>
                <value>
                    <fullName>Repeater</fullName>
                </value>
                <value>
                    <fullName>Bridge/Extender</fullName>
                </value>
                <value>
                    <fullName>Gateway</fullName>
                </value>
                <value>
                    <fullName>LoadBalancer</fullName>
                </value>
                <value>
                    <fullName>Mainframe</fullName>
                </value>
                <value>
                    <fullName>SANSwitch</fullName>
                </value>
                <value>
                    <fullName>SANHub</fullName>
                </value>
                <value>
                    <fullName>SANBridge</fullName>
                </value>
                <value>
                    <fullName>SANRouter</fullName>
                </value>
                <value>
                    <fullName>SANDirectorRAIDStorageDevice</fullName>
                </value>
                <value>
                    <fullName>Virtual Tape Library</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__CS_ResetCapability__c</fullName>
        <label>ResetCapability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Disabled</fullName>
                </value>
                <value>
                    <fullName>Enabled</fullName>
                </value>
                <value>
                    <fullName>Non-recoverable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__CS_ResetCount__c</fullName>
        <label>ResetCount</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__CS_ResetLimit__c</fullName>
        <label>ResetLimit</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__CS_SystemOID__c</fullName>
        <label>SystemOID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__CS_SystemType__c</fullName>
        <label>SystemType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>X86-based PC</fullName>
                </value>
                <value>
                    <fullName>MIPS-based PC</fullName>
                </value>
                <value>
                    <fullName>Alpha-based PC</fullName>
                </value>
                <value>
                    <fullName>Power PCSH-x PC</fullName>
                </value>
                <value>
                    <fullName>StrongARM PC</fullName>
                </value>
                <value>
                    <fullName>64-bit Intel PC</fullName>
                </value>
                <value>
                    <fullName>64-bit Alpha PC</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>X86-Nec98 PC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__CS_ThermalState__c</fullName>
        <label>ThermalState</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Safe</fullName>
                </value>
                <value>
                    <fullName>Warning</fullName>
                </value>
                <value>
                    <fullName>Critical</fullName>
                </value>
                <value>
                    <fullName>Non-recoverable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__CS_TotalPhysicalMemory__c</fullName>
        <label>TotalPhysicalMemory</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__CS_VirtualSystemType__c</fullName>
        <label>VirtualSystemType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>LPAR</fullName>
                </value>
                <value>
                    <fullName>VM/VM Guest</fullName>
                </value>
                <value>
                    <fullName>VMware</fullName>
                </value>
                <value>
                    <fullName>Xen</fullName>
                </value>
                <value>
                    <fullName>LDOM</fullName>
                </value>
                <value>
                    <fullName>Solaris Container</fullName>
                </value>
                <value>
                    <fullName>HP nPartitions</fullName>
                </value>
                <value>
                    <fullName>VPar</fullName>
                </value>
                <value>
                    <fullName>Microsoft Hyper-V</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__CS_Workgroup__c</fullName>
        <label>Workgroup</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ClassName__c</fullName>
        <label>ClassName</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__DBS_Is_System_Area__c</fullName>
        <label>Is System Area</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__DBS_Last_Backup_Time__c</fullName>
        <label>Last Backup Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__DD_InterfaceType__c</fullName>
        <label>InterfaceType</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__DD_Partitions__c</fullName>
        <label>Partitions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__DD_SCSIBus__c</fullName>
        <label>SCSIBus</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__DD_SCSILogicalUnit__c</fullName>
        <label>SCSILogicalUnit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__DD_SCSIPort__c</fullName>
        <label>SCSIPort</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__DD_SCSITargetID__c</fullName>
        <label>SCSITargetID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__DD_SectorsPerTrack__c</fullName>
        <label>SectorsPerTrack</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__DD_Size__c</fullName>
        <label>Size</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__DD_TotalCylinders__c</fullName>
        <label>TotalCylinders</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__DD_TotalHeads__c</fullName>
        <label>TotalHeads</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__DD_TotalSectors__c</fullName>
        <label>TotalSectors</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__DD_TotalTracks__c</fullName>
        <label>TotalTracks</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__DD_TracksPerCylinder__c</fullName>
        <label>TracksPerCylinder</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__DOC_Author__c</fullName>
        <label>Author</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__DOC_DocumentDate__c</fullName>
        <label>DocumentDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__DOC_DocumentSize__c</fullName>
        <label>DocumentSize</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__DOC_DocumentStatus__c</fullName>
        <label>DocumentStatus</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Pre-Released</fullName>
                </value>
                <value>
                    <fullName>Released</fullName>
                </value>
                <value>
                    <fullName>Obsolete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__DOC_DocumentType__c</fullName>
        <label>DocumentType</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__DOC_EndDate__c</fullName>
        <label>EndDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__DOC_FileName__c</fullName>
        <label>FileName</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__DOC_Keywords__c</fullName>
        <label>Keywords</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__DOC_Locale__c</fullName>
        <label>Locale</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__DOC_StartDate__c</fullName>
        <label>StartDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__DP_Block_Size__c</fullName>
        <label>Block Size</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__DP_Bootable__c</fullName>
        <label>Bootable</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__DP_Number_of_Blocks__c</fullName>
        <label>Number of Blocks</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__DP_Primary_Partition__c</fullName>
        <label>Primary Partition</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FE_Per_Time_Period__c</fullName>
        <label>Per Time Period</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FE_UOM__c</fullName>
        <label>UOM</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FS_Available_Space__c</fullName>
        <label>Available Space</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FS_Block_Size__c</fullName>
        <label>Block Size</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FS_File_System_Size__c</fullName>
        <label>File System Size</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FS_File_System_Type__c</fullName>
        <label>File System Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__HSC_PNPDeviceID__c</fullName>
        <label>PNPDeviceID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__HSC_PowerManagementCapabilities__c</fullName>
        <label>PowerManagementCapabilities</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Not Supported</fullName>
                </value>
                <value>
                    <fullName>Disabled</fullName>
                </value>
                <value>
                    <fullName>Enabled</fullName>
                </value>
                <value>
                    <fullName>Power Saving Modes Entered Automatically</fullName>
                </value>
                <value>
                    <fullName>Power State Settable</fullName>
                </value>
                <value>
                    <fullName>Power Cycling Supported</fullName>
                </value>
                <value>
                    <fullName>Timed Power On Supported</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__HSC_SystemAvailability__c</fullName>
        <label>SystemAvailability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Running/Full Power</fullName>
                </value>
                <value>
                    <fullName>Warning</fullName>
                </value>
                <value>
                    <fullName>In Test</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>Power Off</fullName>
                </value>
                <value>
                    <fullName>Off Line</fullName>
                </value>
                <value>
                    <fullName>Off Duty</fullName>
                </value>
                <value>
                    <fullName>Degraded</fullName>
                </value>
                <value>
                    <fullName>Not Installed</fullName>
                </value>
                <value>
                    <fullName>Install Error</fullName>
                </value>
                <value>
                    <fullName>Power Save - Unknown</fullName>
                </value>
                <value>
                    <fullName>Power Save - Low Power Mode</fullName>
                </value>
                <value>
                    <fullName>Power Save - Standby</fullName>
                </value>
                <value>
                    <fullName>Power Cycle</fullName>
                </value>
                <value>
                    <fullName>Power</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ICN_Network_Number__c</fullName>
        <label>Network Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ICS_Address_Type__c</fullName>
        <label>Address Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>IPv4</fullName>
                </value>
                <value>
                    <fullName>IPv6</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ICS_Exploration_Date__c</fullName>
        <label>Exploration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ICS_Prefix_Length__c</fullName>
        <label>Prefix Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ICS_Subnet_Mask__c</fullName>
        <label>Subnet Mask</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ICS_Subnet_Number__c</fullName>
        <label>Subnet Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__IEP_AddressType__c</fullName>
        <label>AddressType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Pv4</fullName>
                </value>
                <value>
                    <fullName>IPv6</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__IEP_DNSHostName__c</fullName>
        <label>DNSHostName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__IEP_ManagementAddress__c</fullName>
        <label>ManagementAddress</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__IEP_PrefixLength__c</fullName>
        <label>PrefixLength</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__IEP_SubnetMask__c</fullName>
        <label>SubnetMask</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__KEY_Layout__c</fullName>
        <label>Layout</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__LAN_Resolution_Date__c</fullName>
        <label>Resolution Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__LEP_AliasAddresses__c</fullName>
        <label>AliasAddresses</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__LEP_GroupAddresses__c</fullName>
        <label>GroupAddresses</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__LEP_LANID__c</fullName>
        <label>LANID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__LEP_MACAddress__c</fullName>
        <label>MACAddress</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__MCF_CFRM_Name__c</fullName>
        <label>CFRM Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__MCF_CFRM_Site_Name__c</fullName>
        <label>CFRM Site Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__MCF_Node_Descriptor__c</fullName>
        <label>Node Descriptor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__MCF_Storage__c</fullName>
        <label>Storage</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__MED_Capabilities__c</fullName>
        <label>Capabilities</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__MED_CompressionMethod__c</fullName>
        <label>CompressionMethod</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__MED_DefaultBlockSize__c</fullName>
        <label>DefaultBlockSize</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__MED_DriveSCSITargetID__c</fullName>
        <label>DriveSCSITargetID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__MED_DriveSize__c</fullName>
        <label>DriveSize</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__MED_DriverInterfaceType__c</fullName>
        <label>DriverInterfaceType</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__MED_MaxBlockSize__c</fullName>
        <label>MaxBlockSize</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__MED_MaxMediaSize__c</fullName>
        <label>MaxMediaSize</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__MED_MediaType__c</fullName>
        <label>MediaType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Removable media</fullName>
                </value>
                <value>
                    <fullName>Fixed hard disk</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__MED_MinBlockSize__c</fullName>
        <label>MinBlockSize</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__MED_NumberOfMediaSupported__c</fullName>
        <label>NumberOfMediaSupported</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__MEM_Capacity__c</fullName>
        <label>Capacity</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__MEM_FormFactor__c</fullName>
        <label>FormFactor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>SIP</fullName>
                </value>
                <value>
                    <fullName>DIP</fullName>
                </value>
                <value>
                    <fullName>ZIP</fullName>
                </value>
                <value>
                    <fullName>SOJ</fullName>
                </value>
                <value>
                    <fullName>Proprietary</fullName>
                </value>
                <value>
                    <fullName>SIMM</fullName>
                </value>
                <value>
                    <fullName>DIMM</fullName>
                </value>
                <value>
                    <fullName>TSOP</fullName>
                </value>
                <value>
                    <fullName>PGA</fullName>
                </value>
                <value>
                    <fullName>RIMM</fullName>
                </value>
                <value>
                    <fullName>SODIMM</fullName>
                </value>
                <value>
                    <fullName>SRIMM</fullName>
                </value>
                <value>
                    <fullName>SMD</fullName>
                </value>
                <value>
                    <fullName>SSMP</fullName>
                </value>
                <value>
                    <fullName>QFP</fullName>
                </value>
                <value>
                    <fullName>TQFP</fullName>
                </value>
                <value>
                    <fullName>SOIC</fullName>
                </value>
                <value>
                    <fullName>LCC</fullName>
                </value>
                <value>
                    <fullName>PLCC</fullName>
                </value>
                <value>
                    <fullName>BGA</fullName>
                </value>
                <value>
                    <fullName>FPBGA</fullName>
                </value>
                <value>
                    <fullName>LGA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__MEM_HotSwappable__c</fullName>
        <label>HotSwappable</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__MEM_MemoryType__c</fullName>
        <label>MemoryType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>DRAM</fullName>
                </value>
                <value>
                    <fullName>Synchronous DRAM</fullName>
                </value>
                <value>
                    <fullName>Cache DRAM</fullName>
                </value>
                <value>
                    <fullName>EDO</fullName>
                </value>
                <value>
                    <fullName>EDRAM</fullName>
                </value>
                <value>
                    <fullName>VRAM</fullName>
                </value>
                <value>
                    <fullName>SRAM</fullName>
                </value>
                <value>
                    <fullName>RAM</fullName>
                </value>
                <value>
                    <fullName>ROM</fullName>
                </value>
                <value>
                    <fullName>Flash</fullName>
                </value>
                <value>
                    <fullName>EEPROM</fullName>
                </value>
                <value>
                    <fullName>FEPROM</fullName>
                </value>
                <value>
                    <fullName>EPROM</fullName>
                </value>
                <value>
                    <fullName>CDRAM</fullName>
                </value>
                <value>
                    <fullName>3DRAM</fullName>
                </value>
                <value>
                    <fullName>SDRAM</fullName>
                </value>
                <value>
                    <fullName>SGRAM</fullName>
                </value>
                <value>
                    <fullName>RDRAM</fullName>
                </value>
                <value>
                    <fullName>DDR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>